@@ -193,6 +193,8 @@ VOTE_USE_SERVER_CONTROLLED_KICK 0 # Set to 1 to use the enhanced server controll
 CONSOLE_DECORATE_ID 1    # Decorates every line of console output with the client ID
 CONSOLE_DECORATE_IP 0    # Decorates every line of console output with the client IP
 
+LADDERLOG_GAME_TIME_INTERVAL -1 # write a line to ladderlog.txt indicating how "old" the curent game is at most every n seconds. Negative values disable this feature.
+
 SINCLUDE server_info.cfg
 # ping flood response DOS protection: if pings from a single machine are requested more often than this,
 # they are not answered. Setting the last item to a negative value disables the system.
