@@ -260,6 +260,7 @@ public:
 
     static void SortByScore(); // brings the players into the right order
     static tString Ranking( int MAX=12, bool cut = true );     // returns a ranking list
+    static void RankingLadderLog();     // writes a small ranking list to ladderlog
     static void  ResetScore();  // resets the ranking list
 
     static void DisplayScores(); // display scores on the screen
